gateway/httproute-get.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: authors-get-route
  namespace: booksapp
spec:
  parentRefs:
    - name: authors-server
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            value: "/authors.json"
          method: GET
        - path:
            value: "/authors/"
            type: "PathPrefix"
          method: GET
